--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
+APScheduler==3.6.3
 certifi==2020.6.20
 chardet==3.0.4
 idna==2.10
 nauschedule==0.1.1
 peewee==3.13.3
 pyTelegramBotAPI==3.7.3
+pytz==2020.1
 requests==2.24.0
 six==1.15.0
+tzlocal==2.1
 urllib3==1.25.10
